# tello-ai-platform

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  MEMORY.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: implement.md  plan.md  review.md  test.md
.claude/hooks/: require-issue-and-branch.sh  validate-workspace.sh
.claude/skills/drone-patterns/: SKILL.md
.claude/skills/mcp-tool-patterns/: SKILL.md
.claude/skills/pr-workflow/: skill.md
.github/workflows/: ci.yml
docs/: architecture.md  phase4d-physical-test-report.md
docs/plans/: 2026-03-13-tello-navigator-design.md
docs/superpowers/plans/: 2026-03-12-tello-platform-scaffold.md  2026-03-13-tello-navigator-plan.md  2026-03-13-tello-telemetry.md  2026-03-14-sdk-alignment-implementation-plan.md  2026-03-15-physical-testing-fixes-plan.md  2026-03-16-forward-tof-implementation-plan.md  2026-03-16-phase4-tof-test-script-plan.md  2026-03-17-forward-tof-threshold-fix-plan.md  2026-03-18-phase4b-obstacle-avoidance.md  2026-03-20-phase4c-obstacle-monitor-bugfixes.md  2026-03-20-phase4d-containerization.md
docs/superpowers/research/: 2026-03-14-sdk-alignment-research.md
docs/superpowers/specs/: 2026-03-11-tello-platform-scaffold-design.md  2026-03-12-tello-telemetry-design.md  2026-03-13-tello-navigator-design.md  2026-03-14-sdk-alignment-design.md  2026-03-16-forward-tof-design.md  2026-03-16-phase4-tof-test-script-design.md  2026-03-17-forward-tof-threshold-fix-design.md  2026-03-18-phase4b-navigator-obstacle-avoidance-design.md  2026-03-20-phase4c-obstacle-monitor-bugfixes-design.md  2026-03-20-phase4d-containerization-design.md
scripts/: find_drone.py  fly.py  no-commit-to-main.sh  setup_router_mode.py  test_tof.py
scripts/seed_data/: 4309_donny_martel_way.json
services/tello-mcp/: pyproject.toml
services/tello-mcp/src/tello_mcp/: __main__.py  config.py  coordinator.py  discovery.py  drone.py  obstacle.py  queue.py  server.py  strategies.py  telemetry.py
services/tello-mcp/src/tello_mcp/tools/: connection.py  coordination.py  expansion.py  flight.py  sensors.py
services/tello-mcp/tests/: conftest.py  test_config.py  test_connection.py  test_coordination_tools.py  test_coordinator.py  test_discovery.py  test_drone.py  test_drone_lock.py  test_obstacle.py  test_queue.py  test_sensors.py  test_strategies.py  test_telemetry.py
services/tello-mcp/tests/test_tools/: test_expansion.py  test_flight.py  test_sensors.py
services/tello-navigator/: pyproject.toml
services/tello-navigator/src/tello_navigator/: __init__.py  __main__.py  config.py  events.py  planner.py  repository.py  server.py
services/tello-navigator/src/tello_navigator/tools/: __init__.py  missions.py  queries.py
services/tello-navigator/tests/: conftest.py  test_config.py  test_events.py  test_planner.py  test_repository.py
services/tello-navigator/tests/test_tools/: test_missions.py  test_queries.py
services/tello-telemetry/: Dockerfile  pyproject.toml
services/tello-telemetry/src/tello_telemetry/: __init__.py  __main__.py  config.py  consumer.py  detector.py  server.py  session_repo.py
services/tello-telemetry/src/tello_telemetry/tools/: __init__.py  queries.py
services/tello-telemetry/tests/: conftest.py  test_config.py  test_consumer.py  test_detector.py  test_health.py  test_integration.py  test_session_repo.py
services/tello-telemetry/tests/test_tools/: test_queries.py
services/tello-vision/: pyproject.toml
services/tello-vision/src/tello_vision/: __init__.py
services/tello-voice/: pyproject.toml
testing/: 2026-03-13-phase3-physical-test-plan.md  forward-tof-threshold-results-2026-03-17.json  phase3-physical-test-plan_v2.md  phase3-physical-test-plan_v3.md  phase4-tof-results-2026-03-17.json  phase4b-obstacle-avoidance-results-2026-03-19.json  test_phase4b.py
