[project]
name = "tello-ai-platform"
version = "0.1.0"
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "packages/tello-core",
    "services/tello-mcp",
    "services/tello-navigator",
    "services/tello-vision",
    "services/tello-voice",
    "services/tello-telemetry",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "ty>=0.0.8",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["packages/*/src", "services/*/src", "services/*/tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "D", "UP", "ANN", "S", "B",
    "C4", "SIM", "TCH", "RUF", "TRY", "EM", "PIE", "PT",
    "RET", "ARG", "PL",
]
ignore = [
    "D100", "D104", "D107", "ANN401", "S101",
    "TRY003", "TRY300", "TRY400", "TRY401",
    "EM101", "EM102", "RET504",
    "PLR0913", "PLR0911", "PLR0912", "PLR0915", "PLR2004",
    "PLC0415", "PLW0603", "PLR1714", "ARG001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101", "S105", "S106", "S311", "SIM117",
    "ANN", "D", "PLR2004", "ARG", "PT",
]
"**/server.py" = ["S104"]
"scripts/**/*.py" = ["D103", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["packages", "services"]
asyncio_mode = "auto"
addopts = ["-ra", "-q", "--import-mode=importlib"]
pythonpath = [
    "packages/tello-core/src",
    "services/tello-mcp/src",
    "services/tello-telemetry/src",
]

[tool.coverage.run]
source = ["packages/tello-core/src", "services/tello-mcp/src", "services/tello-telemetry/src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 50
