[project]
name = "tello-navigator"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "tello-core",
    "langgraph>=0.4",
    "langgraph-checkpoint-redis>=0.3",
    "fastmcp>=3.0.0",
    "redis>=5.0.0",
    "neo4j>=5.15.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tello_navigator"]

[tool.uv.sources]
tello-core = { workspace = true }
